--- a/xbmc/pvrclients/vdr-streamdev/Makefile.in
+++ b/xbmc/pvrclients/vdr-streamdev/Makefile.in
@@ -11,8 +11,8 @@ ARCH     = @ARCH@
 DESTDIR ?=
 PREFIX  ?= /usr/local
 ADDONDIR = $(PREFIX)/share/xbmc/addons
-LIBS     = -lXBMC_addon -lXBMC_pvr
-INCLUDES = -I. -I../../linux -I../../ -I ../../../guilib
+LIBS     = -L../../../lib/libXBMC_addon -lXBMC_addon -L../../../lib/libXBMC_pvr -lXBMC_pvr
+INCLUDES = -I. -I../../linux -I../../ -I ../../../include
 DEFINES += -D_LINUX -fPIC
 LIBDIR   = ../../../addons/pvr/VDR
 LIB      = ../../../addons/pvr/VDR/XBMC_VDR.pvr
