--- a/Makefile.in
+++ b/Makefile.in
@@ -270,7 +270,7 @@ xbmc/lib/libapetag/.libs/libapetag.a: force
 lib/libmodplug/src/.libs/libmodplug.a: force
 	$(MAKE) -C lib/libmodplug
 system/players/paplayer/libmodplug-$(ARCH).so: lib/libmodplug/src/.libs/libmodplug.a
-	ld -all_load -bundle -flat_namespace -undefined suppress -o $@ $<
+	ld -all_load -bundle -flat_namespace -undefined suppress -arch @ARCHTYPE@ -o $@ $<
 lib/xbmc-dll-symbols/dll-symbols.a: force
 	$(MAKE) -C lib/xbmc-dll-symbols
 lib/libmicrohttpd/src/daemon/.libs/libmicrohttpd.a: force
