--- a/skin/Confluence/media/Makefile
+++ b/skin/Confluence/media/Makefile
@@ -67,6 +67,10 @@ IMAGES= \
 	DefaultFolder.png \
 	DefaultFolderBack.png \
 	DefaultHardDisk.png \
+	DefaultIconError.png \
+	DefaultIconInfo.png \
+	DefaultIconStatus.png \
+	DefaultIconWarning.png \
 	DefaultMovies.png \
 	DefaultMusicAlbums.png \
 	DefaultMusicArtists.png \
