--- a/xbmc/pvrclients/vdr-streamdev/Makefile.in
+++ b/xbmc/pvrclients/vdr-streamdev/Makefile.in
@@ -11,7 +11,8 @@ ARCH     = @ARCH@
 DESTDIR ?=
 PREFIX  ?= /usr/local
 ADDONDIR = $(PREFIX)/share/xbmc/addons
-LIBS     = -L../../../lib/libXBMC_addon -lXBMC_addon -L../../../lib/libXBMC_pvr -lXBMC_pvr
+#LIBS     = -L../../../lib/libXBMC_addon -lXBMC_addon -L../../../lib/libXBMC_pvr -lXBMC_pvr
+LIBS     = ../../../lib/libXBMC_pvr/libXBMC_pvr.a ../../../lib/libXBMC_addon/libXBMC_addon.a
 INCLUDES = -I. -I../../linux -I../../ -I ../../../include
 DEFINES += -D_LINUX -fPIC
 LIBDIR   = ../../../addons/pvr/VDR
