--- a/xbmc/visualizations/XBMCProjectM/Makefile.in
+++ b/xbmc/visualizations/XBMCProjectM/Makefile.in
@@ -2,6 +2,8 @@ ARCH=@ARCH@
 INCLUDES=-I. -I../../../include
 OBJS=Main.o
 SLIB=../../../addons/visualizations/ProjectM/projectM.vis
+#LIBS     = -L../../../lib/libXBMC_addon -lXBMC_addon
+LIBS     = ../../../lib/libXBMC_addon/libXBMC_addon.a
 DEFINES+=-DHAS_SDL_OPENGL -DHAS_SDL
 CXXFLAGS=-fPIC
 DIRS=libprojectM
@@ -12,7 +14,7 @@ CXXFLAGS+=-fno-common
 $(SLIB): $(OBJS) libprojectM/libprojectM.dylib
 	$(CXX) -bundle -shared -undefined suppress -flat_namespace $(CFLAGS) -o $(SLIB) \
 		./libprojectM/CMakeFiles/projectM.dir/*.o \
-		$(OBJS) -L../../../lib/libXBMC_addon -lXBMC_addon
+		$(OBJS) $(LIBS)
 	../../../tools/Mach5/wrapper.rb $@;mv output.so $@
 	rsync -lptgoDv --cvs-exclude libprojectM/presets/* ../../../visualisations/projectM
 
@@ -20,7 +22,7 @@ libprojectM/libprojectM.dylib:
 	$(MAKE) -C libprojectM
 else
 $(SLIB): $(OBJS) libprojectM/libprojectM.so
-	$(CXX) $(CXXFLAGS) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared -o $(SLIB) $(OBJS) -L../../../lib/libXBMC_addon -lXBMC_addon `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
+	$(CXX) $(CXXFLAGS) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared -o $(SLIB) $(OBJS) $(LIBS) `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
 	zip -qj ../../../addons/visualizations/ProjectM/resources/presets.zip libprojectM/presets/*
 
 libprojectM/libprojectM.so: 
