--- a/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
+++ b/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
@@ -210,7 +210,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\getline.cpp"
+				RelativePath="..\..\windows\getline.cpp"
 				>
 			</File>
 			<File
@@ -268,7 +268,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\getline.h"
+				RelativePath="..\..\windows\getline.h"
 				>
 			</File>
 			<File
